--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,7 +5,7 @@ description = "Justin's Object-Oriented Paradigms"
 authors = [
     {name = "Justin Rushin"}
 ]
-license = {text = "Apache-2.0"}
+license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -33,7 +33,12 @@ joop = "joop.cli:main"
 
 [dependency-groups]
 dev = [
-    "coverage (>=7.13)"
+    "coverage (>=7.13)",
+    "twine (>=6.2.0,<7.0.0)",
+    "build (>=1.3.0,<2.0.0)",
+    "sphinx (<9.0.0)",
+    "sphinx-autodoc-typehints (<3.6.0)",
+    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
 ]
 
 
@@ -47,3 +52,7 @@ addopts = "-v"
 testpaths = [
     "joop/tests"
 ]
+
+[tool.poetry]
+include = ["README.md", "LICENSE", "docs/*", "tests/*"]
+exclude = ["*.pyc", "*.pyo", ".DS_Store", "build/*", "dist/*"]
