--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -9,7 +9,11 @@ license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "click (>=7.0)"
+    "click (>=7.0)",
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "markupsafe (>=3.0.3,<4.0.0)",
+    "pydantic (>=2.12.5,<3.0.0)",
+    "sqlmodel (>=0.0.31,<0.0.32)"
 ]
 
 classifiers = [
@@ -20,7 +24,7 @@ classifiers = [
     'Programming Language :: Python :: 3.11',
     'Topic :: Software Development :: Libraries'
 ]
-keywords = ["object-oriented programming", "DAO", "HTMX", "Python"]
+keywords = ["object-oriented programming", "DAO", "HTMX", "AlpineJS", "Python"]
 
 [project.urls]
 bugs = "https://github.com/rushinjgr/joop/issues"
@@ -31,6 +35,9 @@ source = "https://github.com/rushinjgr/joop"
 [project.scripts]
 joop = "joop.cli:main"
 
+[project.optional-dependencies]
+flask = ["flask (>=3.1.2,<4.0.0)"]
+
 [dependency-groups]
 dev = [
     "coverage (>=7.13)",
@@ -38,7 +45,7 @@ dev = [
     "build (>=1.3.0,<2.0.0)",
     "sphinx (<9.0.0)",
     "sphinx-autodoc-typehints (<3.6.0)",
-    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
+    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
 ]
 
 
